--- a/templates/index.html
+++ b/templates/index.html
@@ -28,54 +28,52 @@
                 <option value="babson_lot">Babson Lot</option>
                 <option value="becc">Babson Executive Conference Center</option>
                 <option value="becc_lot">BECC Garage</option>
-                <option value="blank">Arthur M. Blank Center</option> 
-                <option value="brac">Babson Recreation and Athletics Complex</option> 
-                <option value="bryant">Bryant Hall</option> 
+                <option value="blank">Arthur M. Blank Center</option>
+                <option value="brac">Babson Recreation and Athletics Complex</option>
+                <option value="bryant">Bryant Hall</option>
                 <option value="bryant_lot">Bryant Lot</option>
                 <option value="bsc">Boston Sports Club</option>
                 <option value="canfield">Canfield Hall</option>
                 <option value="central_services">Central Services</option>
-                <option value="chapel">Glavin Family Chapel</option> 
-                <option value="coleman">Coleman Hall</option> 
+                <option value="chapel">Glavin Family Chapel</option>
+                <option value="coleman">Coleman Hall</option>
                 <option value="coleman_lot">Coleman Lot</option>
                 <option value="commons">Babson Commons</option>
                 <option value="cruikshank">William Cruickshank Alumni Hall</option>
                 <option value="forest">Forest Hall</option>
                 <option value="forest_annex">Forest Hall (Annex)</option>
                 <option value="forest_lot">Forest Lot</option>
-                <option value="foundry">(Weissman) Foundry</option> 
-                <option value="foundry_lot">Foundry Lot</option> 
                 <option value="gerber">Gerber Hall</option>
-                <option value="globe">the Globe</option>
+                <option value="globe">(the) Globe</option>
                 <option value="hartwell_rogers_field">Hartwell Rogers Field</option>
                 <option value="hollister">Hollister Hall</option>
-                <option value="hollister_lot">Hollister Lot</option> 
-                <option value="horn">Horn Library</option> 
+                <option value="hollister_lot">Hollister Lot</option>
+                <option value="horn">Horn Library</option>
                 <option value="horn_cpu">Horn Library Computer Center</option>
-                <option value="innovation">The Innovation Center</option> 
+                <option value="innovation">(the) Innovation Center</option>
                 <option value="isbrandtsen_field">Isbrandtsen Field</option>
                 <option value="keith">Keith Hall</option>
                 <option value="knight">Knight Auditorium</option>
                 <option value="knight_lot">Knight Lot</option>
-                <option value="kriebel">Kriebel Hall</option> 
-                <option value="luksic">Luksic Hall</option> 
-                <option value="macdowell_field">MacDowell Field</option> 
+                <option value="kriebel">Kriebel Hall</option>
+                <option value="luksic">Luksic Hall</option>
+                <option value="macdowell_field">MacDowell Field</option>
                 <option value="malloy">Malloy Hall</option>
                 <option value="mandell">Mandell Family Hall</option>
                 <option value="manor_central">Park Manor Central</option>
                 <option value="manor_north">Park Manor North</option>
-                <option value="manor_quad">Park Manor Quad</option> 
-                <option value="manor_south">Park Manor South</option> 
+                <option value="manor_quad">Park Manor Quad</option>
+                <option value="manor_south">Park Manor South</option>
                 <option value="manor_west">Park Manor West</option>
                 <option value="mattos">Mattos Hall</option>
                 <option value="mccullough">McCullough Hall</option>
                 <option value="millea">Millea Hall</option>
-                <option value="mustard">Mustard Hall (Admissions</option>
-                <option value="nichols">Nichols Building</option> 
-                <option value="nichols_lot">Nichols Lot</option> 
-                <option value="olin">Olin Hall</option> 
+                <option value="mustard">Mustard Hall (Admissions)</option>
+                <option value="nichols">Nichols Building</option>
+                <option value="nichols_lot">Nichols Lot</option>
+                <option value="olin">Olin Hall</option>
                 <option value="olin_lot">Olin Lot</option>
-                <option value="pietz">Pietz Hall</option> 
+                <option value="pietz">Pietz Hall</option>
                 <option value="post_office">Post Office (USPS)</option>
                 <option value="public_safety">Public Safety</option>
                 <option value="putney">Putney Hall</option>
@@ -84,16 +82,18 @@
                 <option value="skating_lot">Skating Lot</option>
                 <option value="skating_rink">Skating Center</option>
                 <option value="softball_field">Alumni Softball Field</option>
-                <option value="sorenson">Sorenson</option>
+                <option value="sorenson">Sorenson Center</option>
                 <option value="sullivan">Sullivan Building</option>
                 <option value="sullivan_lot">Sullivan Lot</option>
                 <option value="tennis_court">Tennis Courts</option>
                 <option value="tomasso">Tomasso Hall</option>
-                <option value="trim">Trim Dining Hall</option> 
-                <option value="trim_lot">Trim Parking Lot</option> 
+                <option value="trim">Trim Dining Hall</option>
+                <option value="trim_lot">Trim Lot</option>
                 <option value="van_winkle">Van Winkle Hall</option>
                 <option value="webster">Webster Center</option>
                 <option value="webster_lot">Webster Lot</option>
+                <option value="foundry">(the) Weissman Foundry</option>
+                <option value="foundry_lot">(the) Weissman Foundry Lot</option>
                 <option value="westgate">Westage Hall</option>
                 <option value="woodland_1">Woodland Building 1</option>
                 <option value="woodland_10">Woodland Building 10</option>
@@ -116,54 +116,52 @@
                 <option value="babson_lot">Babson Lot</option>
                 <option value="becc">Babson Executive Conference Center</option>
                 <option value="becc_lot">BECC Garage</option>
-                <option value="blank">Arthur M. Blank Center</option> 
-                <option value="brac">Babson Recreation and Athletics Complex</option> 
-                <option value="bryant">Bryant Hall</option> 
+                <option value="blank">Arthur M. Blank Center</option>
+                <option value="brac">Babson Recreation and Athletics Complex</option>
+                <option value="bryant">Bryant Hall</option>
                 <option value="bryant_lot">Bryant Lot</option>
                 <option value="bsc">Boston Sports Club</option>
                 <option value="canfield">Canfield Hall</option>
                 <option value="central_services">Central Services</option>
-                <option value="chapel">Glavin Family Chapel</option> 
-                <option value="coleman">Coleman Hall</option> 
+                <option value="chapel">Glavin Family Chapel</option>
+                <option value="coleman">Coleman Hall</option>
                 <option value="coleman_lot">Coleman Lot</option>
                 <option value="commons">Babson Commons</option>
                 <option value="cruikshank">William Cruickshank Alumni Hall</option>
                 <option value="forest">Forest Hall</option>
                 <option value="forest_annex">Forest Hall (Annex)</option>
-                <option value="forest_lot">Forest Lot</option> 
-                <option value="foundry">(Weissman) Foundry</option> 
-                <option value="foundry_lot">Foundry Lot</option> 
+                <option value="forest_lot">Forest Lot</option>
                 <option value="gerber">Gerber Hall</option>
-                <option value="globe">the Globe</option>
+                <option value="globe">(the) Globe</option>
                 <option value="hartwell_rogers_field">Hartwell Rogers Field</option>
                 <option value="hollister">Hollister Hall</option>
-                <option value="hollister_lot">Hollister Lot</option> 
-                <option value="horn">Horn Library</option> 
+                <option value="hollister_lot">Hollister Lot</option>
+                <option value="horn">Horn Library</option>
                 <option value="horn_cpu">Horn Library Computer Center</option>
-                <option value="innovation">The Innovation Center</option> 
+                <option value="innovation">(the) Innovation Center</option>
                 <option value="isbrandtsen_field">Isbrandtsen Field</option>
                 <option value="keith">Keith Hall</option>
                 <option value="knight">Knight Auditorium</option>
                 <option value="knight_lot">Knight Lot</option>
-                <option value="kriebel">Kriebel Hall</option> 
-                <option value="luksic">Luksic Hall</option> 
-                <option value="macdowell_field">MacDowell Field</option> 
+                <option value="kriebel">Kriebel Hall</option>
+                <option value="luksic">Luksic Hall</option>
+                <option value="macdowell_field">MacDowell Field</option>
                 <option value="malloy">Malloy Hall</option>
                 <option value="mandell">Mandell Family Hall</option>
                 <option value="manor_central">Park Manor Central</option>
                 <option value="manor_north">Park Manor North</option>
-                <option value="manor_quad">Park Manor Quad</option> 
-                <option value="manor_south">Park Manor South</option> 
+                <option value="manor_quad">Park Manor Quad</option>
+                <option value="manor_south">Park Manor South</option>
                 <option value="manor_west">Park Manor West</option>
                 <option value="mattos">Mattos Hall</option>
                 <option value="mccullough">McCullough Hall</option>
                 <option value="millea">Millea Hall</option>
-                <option value="mustard">Mustard Hall (Admissions</option>
-                <option value="nichols">Nichols Building</option> 
-                <option value="nichols_lot">Nichols Lot</option> 
-                <option value="olin">Olin Hall</option> 
+                <option value="mustard">Mustard Hall (Admissions)</option>
+                <option value="nichols">Nichols Building</option>
+                <option value="nichols_lot">Nichols Lot</option>
+                <option value="olin">Olin Hall</option>
                 <option value="olin_lot">Olin Lot</option>
-                <option value="pietz">Pietz Hall</option> 
+                <option value="pietz">Pietz Hall</option>
                 <option value="post_office">Post Office (USPS)</option>
                 <option value="public_safety">Public Safety</option>
                 <option value="putney">Putney Hall</option>
@@ -172,16 +170,18 @@
                 <option value="skating_lot">Skating Lot</option>
                 <option value="skating_rink">Skating Center</option>
                 <option value="softball_field">Alumni Softball Field</option>
-                <option value="sorenson">Sorenson</option>
+                <option value="sorenson">Sorenson Center</option>
                 <option value="sullivan">Sullivan Building</option>
                 <option value="sullivan_lot">Sullivan Lot</option>
                 <option value="tennis_court">Tennis Courts</option>
                 <option value="tomasso">Tomasso Hall</option>
-                <option value="trim">Trim Dining Hall</option> 
-                <option value="trim_lot">Trim Parking Lot</option> 
+                <option value="trim">Trim Dining Hall</option>
+                <option value="trim_lot">Trim Lot</option>
                 <option value="van_winkle">Van Winkle Hall</option>
                 <option value="webster">Webster Center</option>
                 <option value="webster_lot">Webster Lot</option>
+                <option value="foundry">(the) Weissman Foundry</option>
+                <option value="foundry_lot">(the) Weissman Foundry Lot</option>
                 <option value="westgate">Westage Hall</option>
                 <option value="woodland_1">Woodland Building 1</option>
                 <option value="woodland_10">Woodland Building 10</option>
